--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,7 @@ theme: volantis
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: 'git'
+  repo: 
+    github: https://github.com/oylx-maker/oylx-maker.github.io.git
+  branch: gh-pages
