--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,8 @@ theme: volantis
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: 'git'
+  type: git
   repo: 
     github: https://github.com/oylx-maker/oylx-maker.github.io.git
+    coding: git@e.coding.net:oylx2021/blog/blog.git
   branch: gh-pages
