--- a/_config.yml
+++ b/_config.yml
@@ -102,8 +102,13 @@ theme: volantis
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: git
-  repo: 
-    github: https://github.com/oylx-maker/oylx-maker.github.io.git
-    coding: git@e.coding.net:oylx2021/blog/blog.git
-  branch: gh-pages
+  - type: git
+    repo: https://github.com/goylx/goylx.github.io.git
+    branch: gh-pages
+  - type: git
+    repo: git@e.coding.net:oylx2021/blog/blog.git
+    branch: gh-pages
+  - type: git
+    repo: https://gitee.com/oylxgl/blog.git
+    branch: gh-pages
+  
