--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-search": "^2.4.1",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-offline-popup": "^1.0.3",
     "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
