--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 人云亦云楼
-subtitle: ''
+title: 楼
+subtitle: '愿你既能朝九晚五，又能浪迹天涯'
 description: ''
 keywords: [java,html,spring,springboot,redis,js,css,hexo,volantis,elasticsearch]
 author: 欧阳罗霄
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://guluo.icu
+url: https://www.guluo.icu
 permalink: :title/
 permalink_defaults:
 pretty_urls:
@@ -99,6 +99,11 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: volantis
 
+baidu_url_submit:
+  count: 1               # 提交最新的多少个链接
+  host: www.guluo.icu    # 在百度站长平台中添加的域名
+  token: XWCyZ0Fm8hUlA4dC      # 密钥
+  path: baidu_urls.txt   # 文本文档的地址， 新链接会保存在此文本文档里
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
@@ -111,8 +116,25 @@ deploy:
   - type: git
     repo: https://gitee.com/oylxgl/blog.git
     branch: gh-pages
+  - type: baidu_url_submitter                         # 这是新加的主动推送
 import:
+  meta:
+    - <meta name="msapplication-TileColor" content="#ffffff">
+    - <meta name="msapplication-config" content="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/browserconfig.xml">
+    - <meta name="theme-color" content="#ffffff">
+  link:
+    - <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/apple-touch-icon.png">
+    - <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/favicon-32x32.png">
+    - <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/favicon-16x16.png">
+    - <link rel="manifest" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/site.webmanifest">
+    - <link rel="mask-icon" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    - <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/favicon.ico">
   script:
-    - <script>var _hmt = _hmt || [];(function() {var hm = document.createElement("script");hm.src = "https://hm.baidu.com/hm.js?8eaac8f3d3279e0c748b7ebd0ff64d1c";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();</script>
-    - <script async src="/js/gtag.js"></script>
-    - <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-TS0XM5EFK1');</script>
+baidu_analytics_key: 3736afbe2db81c97b667096bfc2567fb
+google_analytics_key: G-TS0XM5EFK1
+sitemap:
+    path: sitemap.xml
+    tags: false
+    categorys: false
+    about: false
+    friends: false
