--- a/_config.yml
+++ b/_config.yml
@@ -129,6 +129,7 @@ import:
     - <link rel="manifest" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/site.webmanifest">
     - <link rel="mask-icon" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/safari-pinned-tab.svg" color="#5bbad5">
     - <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/favicon.ico">
+    - <link rel="stylesheet" href="/css/oylx_style.css"></link>
   script:
 baidu_analytics_key: 3736afbe2db81c97b667096bfc2567fb
 google_analytics_key: G-TS0XM5EFK1
