--- a/_config.volantis.yml
+++ b/_config.volantis.yml
@@ -13,9 +13,9 @@ custom_css:
   # 字体设计
   fontfamily:
     logofont:
-      fontfamily: '"Varela Round", "PingFang SC", "Microsoft YaHei", Helvetica, Arial'
-      name: 'Varela Round'
-      url: https://cdn.jsdelivr.net/gh/volantis-x/cdn-fonts/VarelaRound/VarelaRound-Regular.ttf
+      fontfamily: '"fwzcN", "Varela Round", "PingFang SC", "Microsoft YaHei", Helvetica, Arial'
+      name: 'fwzcN'
+      url: /fonts/foundertype/fwzcN.OTF
       weight: normal
       style: normal
     bodyfont:
@@ -25,8 +25,11 @@ custom_css:
       weight: normal
       style: normal
     codefont:
-      fontfamily: 'Menlo, UbuntuMono, Monaco'
-
+      fontfamily: '"sxls",Menlo, UbuntuMono, Monaco'
+      name : 'sxls'
+      url: /fonts/foundertype/sxls.OTF
+      weight: normal
+      style: normal
 # 页面配置
 pages:
   friends:
@@ -123,8 +126,8 @@ article:
         desc: '' # 条评论
       # 文章字数和阅读时长
       wordcount:
-        icon_wordcount: fas fa-keyboard
-        icon_duration: fas fa-hourglass-half
+        icon_wordcount: fad fa-keyboard PETERRIVE fa-fw
+        icon_duration: fad fa-hourglass-half BELIZEHOLE fa-fw
       # 文章标签
       tags:
         icon: fas fa-hashtag
@@ -143,7 +146,7 @@ plugins:
   # jquery
   jquery: https://cdn.jsdelivr.net/npm/jquery@3.5/dist/jquery.min.js
   # fontawesome
-  fontawesome: https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14/css/all.min.css
+  fontawesome: /fonts/fontawesome/css/all.min.css
   ################# optional plugins ################
 
   ######### Plugins to improve loading speed:
@@ -358,7 +361,6 @@ cover:
   height_scheme: full
   layout_scheme: search # search (搜索), dock (坞), featured (精选), focus (焦点)
   # logo:  https://cdn.jsdelivr.net/gh/TRHX/CDN-for-itrhx.com@3.1.1/images/logo.png
-  background: https://cdn.jsdelivr.net/gh/xaoxuu/cdn-wallpaper/abstract/41F215B9-261F-48B4-80B5-4E86E165259E.jpeg
   search: '世界之大，探索一下！'
   logo: /image/logo.png
   title: ''
@@ -373,6 +375,8 @@ cover:
       url: archives/
     - name: 友链
       url: friends/
+    - name: 关于
+      url: about/
 
   display:
     home: true
@@ -384,6 +388,37 @@ navbar:
     img:
     icon:
     title:
+  menu: 
+    - name: 首页
+      icon: fad fa-helmet-battle GREENSEA fa-fw
+      url: /
+    - name: 导航
+      icon: fad fa-cube NEPHRITIS fa-fw
+      rows: 
+        - name: 分类
+          icon: fad fa-folder-open TURQUOISE fa-fw
+          url: categories/
+        - name: 标签
+          icon: fad fa-tags EMERALD fa-fw
+          url: tags/
+        - name: 归档
+          icon: fad fa-archive PETERRIVE fa-fw
+          url: archives/
+    - name: 更多
+      icon: fad fa-megaphone POMEGRANATE fa-fw
+      rows: 
+        - name: 关于
+          icon: fad fa-drafting-compass SUNFLOWER fa-fw
+          url: about/
+        - name: 友链
+          icon: fad fa-stamp ALIZARIN fa-fw
+          url: friends/
+        - name: 留言
+          icon: fad fa-comment-alt-smile WETASPHALT fa-fw
+          url: archives/
+    
+          
+
   search: 世界之大，探索一下！   # Search bar placeholder
 
 # 自定义右键菜单
@@ -408,7 +443,7 @@ rightmenu:
 # 侧边栏配置
 sidebar:
   # 主页、分类、归档等独立页面
-  for_page: [blogger, category, tagcloud, qrcode, webinfo]
+  for_page: [blogger, webinfo]
   # layout: docs/post 这类文章页面
   for_post: [toc]
   # 侧边栏组件库
