--- a/_config.yml
+++ b/_config.yml
@@ -107,9 +107,9 @@ baidu_url_submit:
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  - type: git
-    repo: https://github.com/goylx/goylx.github.io.git
-    branch: gh-pages
+  # - type: git
+  #   repo: https://github.com/goylx/goylx.github.io.git
+  #   branch: gh-pages
   - type: git
     repo: git@e.coding.net:oylx2021/blog/blog.git
     branch: gh-pages
@@ -128,7 +128,7 @@ import:
     - <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/favicon-16x16.png">
     - <link rel="manifest" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/site.webmanifest">
     - <link rel="mask-icon" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    - <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/favicon/favicon.ico">
+    - <link rel="shortcut icon" href="/favicon.ico">
     - <link rel="stylesheet" href="/css/oylx_style.css"></link>
   script:
     # - <script src="/fonts/fontawesome/js/all.min.js"></script>
