使用fork的volantis主题代替原来的主题

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: '愿你既能朝九晚五，又能浪迹天涯'
 description: ''
 keywords: [java,html,spring,springboot,redis,js,css,hexo,volantis,elasticsearch]
 author: 欧阳罗霄
-language: zh_CN
+language: zh-CN
 timezone: ''
 
 # URL
